@@ -235,9 +235,7 @@ get '/to_string' => sub {
 get '/source' => sub {
   my $c    = shift;
   my $file = $c->param('fail') ? 'does_not_exist.txt' : '../lite_app.t';
-  $c->render_maybe('this_does_not_ever_exist')
-    or $c->reply->static($file)
-    or $c->res->headers->header('X-Missing' => 1);
+  $c->render_maybe('this_does_not_ever_exist') or $c->reply->static($file);
 };
 
 get '/foo_relaxed/#test' => sub {
@@ -745,13 +743,12 @@ $t->get_ok('/inline/ep/include')->status_is(200)->content_is("♥just ♥\nworks
 $t->get_ok('/to_string')->status_is(200)->content_is('beforeafter');
 
 # Render static file outside of public directory
-$t->get_ok('/source')->status_is(200)->content_type_is('application/octet-stream')->header_isnt('X-Missing' => 1)
-  ->content_like(qr!get_ok\('/source!);
+$t->get_ok('/source')->status_is(200)->content_type_is('application/octet-stream')->content_like(qr!get_ok\('/source!);
 
 # File does not exist
 $log = '';
 $cb  = $t->app->log->on(message => sub { $log .= pop });
-$t->get_ok('/source?fail=1')->status_is(404)->header_is('X-Missing' => 1)->content_is("Oops!\n");
+$t->get_ok('/source?fail=1')->status_is(500)->content_like(qr/Static file "does_not_exist.txt" not found/);
 like $log, qr/Static file "does_not_exist.txt" not found/, 'right message';
 $t->app->log->unsubscribe(message => $cb);
 
